--- a/good_plan/pubspec.yaml
+++ b/good_plan/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  google_fonts: ^1.1.0
   flutter_svg: ^0.19.2+1
   flutter:
     sdk: flutter
